# educational-image-enhancer

./: README.md  pyproject.toml  requirements.txt  setup.py
modules/: half_paper.py  warp_texture_blur_sticker.py
src/ur_material/: image_enhance_large.py  image_enhance_small.py
src/ur_material.egg-info/: PKG-INFO  requires.txt
src/ur_material/large/: functions.py  image_enhance_large.py
src/ur_material/modules/: __init__.py  add_ink_leak.py  add_watermark.py  color_extraction.py  contains_gray.py  ink_reduce.py  make_it_old_final.py  rotate.py  warp_texture_blur_sticker.py
src/ur_material/small/: functions.py
