[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ur_material"
version = "0.0.1"
authors = [
  { name="Divider-dggggt", email="c2433491302@gmail.com" },
]
description = "Make your doc seems more like materials"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Divider-dggggt/ur_material"
Issues = "https://github.com/Divider-dggggt/ur_material/issues"